src/shell/snapshots/rtx__shell__bash__tests__deactivate.snap
---
source: src/shell/bash.rs
expression: replace_path(&deactivate)
---
PROMPT_COMMAND="${PROMPT_COMMAND//_rtx_hook;/}"
PROMPT_COMMAND="${PROMPT_COMMAND//_rtx_hook/}"
unset _rtx_hook
unset rtx
unset RTX_SHELL

