src/shell/snapshots/rtx__shell__bash__tests__hook_init.snap
---
source: src/shell/bash.rs
expression: "bash.activate(exe, \" --status\".into())"
---
export PATH="/some/dir:$PATH"
export RTX_SHELL=bash
export __RTX_ORIG_PATH="$PATH"

rtx() {
  local command
  command="${1:-}"
  if [ "$#" = 0 ]; then
    command /some/dir/rtx
    return
  fi
  shift

  case "$command" in
  deactivate|s|shell)
    # if argv doesn't contains -h,--help
    if [[ ! " $@ " =~ " --help " ]] && [[ ! " $@ " =~ " -h " ]]; then
      eval "$(command /some/dir/rtx "$command" "$@")"
      return $?
    fi
    ;;
  esac
  command /some/dir/rtx "$command" "$@"
}

_rtx_hook() {
  local previous_exit_status=$?;
  eval "$(rtx hook-env --status -s bash)";
  return $previous_exit_status;
};
if [[ ";${PROMPT_COMMAND:-};" != *";_rtx_hook;"* ]]; then
  PROMPT_COMMAND="_rtx_hook${PROMPT_COMMAND:+;$PROMPT_COMMAND}"
fi

