src/shell/snapshots/rtx__shell__bash__tests__hook_init_nix.snap
---
source: src/shell/bash.rs
expression: "bash.activate(exe, true)"
---
export RTX_SHELL=bash

rtx() {
  local command
  command="${1:-}"
  if [ "$#" = 0 ]; then
    command rtx
    return
  fi
  shift

  case "$command" in
  deactivate|shell)
    eval "$(command rtx "$command" "$@")"
    ;;
  *)
    command rtx "$command" "$@"
    ;;
  esac
}

_rtx_hook() {
  local previous_exit_status=$?;
  eval "$(rtx hook-env --status -s bash)";
  return $previous_exit_status;
};
if ! [[ "${PROMPT_COMMAND:-}" =~ _rtx_hook ]]; then
  PROMPT_COMMAND="_rtx_hook${PROMPT_COMMAND:+;$PROMPT_COMMAND}"
fi

