src/shell/snapshots/rtx__shell__bash__tests__set_env.snap
---
source: src/shell/bash.rs
expression: "Bash::default().set_env(\"FOO\", \"1\")"
---
export FOO=1

